# goit-pythonweb-hw-10

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/core/: limiter.py
src/database/: db.py  models.py
src/migrations/: env.py
src/migrations/versions/: 738bfaa43e35_.py  896567ac9030_create_tables.py  c129e31e22e8_change_user_table_column_name_to_.py
src/repositories/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
